# proga

./: 1.md  CMakeLists.txt  README.md  README1.md  server.conf
data/: comprehensive_test_queries.txt.txt  default_tariff.cfg  generated_data.txt  provider_data.txt  queries.txt  tariff.cfg
integration_tests/: run_all_tests.sh  run_stage5_tests.sh  test_common.sh
integration_tests/scenarios/scenario1/: commands_s1.txt  expected_db_after_s1.txt  expected_output_s1.txt  initial_data_s1.txt  output_actual_s1.txt  tariff_s1.cfg
integration_tests/scenarios/scenario2/: commands_s2.txt  expected_output_s2.txt  initial_data_s2.txt  output_actual_s2.txt  tariff_s2.cfg
integration_tests/scenarios/scenario3/: commands_s3.txt  expected_output_s3.txt  initial_data_s3.txt  output_actual_s3.txt  tariff_s3.cfg
integration_tests/scenarios/scenario4/: commands_s4.txt  expected_output_s4.txt  initial_data_s4.txt  output_actual_s4.txt  tariff_s4.cfg
integration_tests/scenarios/scenario5/: commands_s5.txt  dataset_A_s5.txt  expected_dataset_A_after_save_s5.txt  expected_dataset_B_after_save_s5.txt  expected_output_s5.txt  output_actual_s5.txt  tariff_s5.cfg
integration_tests/test_server_data_root/server_databases/: dataset_A_s5.txt  dataset_B_s5.txt
server_databases/: initial_data.txt
src/: common_defs.h  database.cpp  database.h  date.cpp  date.h  ip_address.cpp  ip_address.h  main.cpp  provider_record.cpp  provider_record.h  query_parser.cpp  query_parser.h  tariff_plan.cpp  tariff_plan.h  user_interface.cpp  user_interface.h
src/client/: client_main.cpp  client_processing_logic.h  db_client.cpp  db_client.h
src/core/: database.cpp  database.h  date.cpp  date.h  ip_address.cpp  ip_address.h  provider_record.cpp  provider_record.h  query_parser.cpp  query_parser.h  tariff_plan.cpp  tariff_plan.h
src/net/: tcp_socket.cpp  tcp_socket.h
src/network/: network_protocol.h  socket_utils.cpp  socket_utils.h
src/server/: db_server.cpp  db_server.h  server.cpp  server.h  server_command_handler.cpp  server_command_handler.h  server_config.cpp  server_config.h  server_main.cpp
src/utils/: file_utils.cpp  file_utils.h  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
tests/system/scripts/: check_generated_data.sh  run_client_server_multi_test.sh  run_client_server_single_test.sh  run_http_tests.sh  run_server_robustness_test.sh  run_standalone_batch_test.sh  run_standalone_robustness_test.sh
tests/system/test_data_cs_multi/: client_scenario_multi_1.txt  client_scenario_multi_1_expected_output.txt  client_scenario_multi_2.txt  client_scenario_multi_2_expected_output.txt  client_scenario_multi_3.txt  client_scenario_multi_3_expected_output.txt  client_scenario_multi_A1.txt  client_scenario_multi_A1_expected_output.txt  client_scenario_multi_A2.txt  client_scenario_multi_A2_expected_output.txt  client_scenario_multi_A3.txt  client_scenario_multi_A3_expected_output.txt  client_scenario_multi_B1.txt  client_scenario_multi_B1_expected_output.txt  client_scenario_multi_B2.txt  client_scenario_multi_B2_expected_output.txt  client_scenario_multi_B3.txt  client_scenario_multi_B3_expected_output.txt  client_scenario_multi_C1.txt  client_scenario_multi_C1_expected_output.txt  client_scenario_multi_C2.txt  client_scenario_multi_C2_expected_output.txt  client_scenario_multi_C3.txt  client_scenario_multi_C3_expected_output.txt  client_scenario_multi_D1.txt  client_scenario_multi_D1_expected_output.txt  client_scenario_multi_D2.txt  client_scenario_multi_D2_expected_output.txt  client_scenario_multi_D3.txt  client_scenario_multi_D3_expected_output.txt  client_scenario_multi_E1.txt  client_scenario_multi_E1_expected_output.txt  client_scenario_multi_E2.txt  client_scenario_multi_E2_expected_output.txt  client_scenario_multi_E3.txt  client_scenario_multi_E3_expected_output.txt  client_scenario_multi_F1.txt  client_scenario_multi_F1_expected_output.txt  client_scenario_multi_F2.txt  client_scenario_multi_F2_expected_output.txt  (+11 more)
tests/system/test_data_cs_single/: client_scenario_single.txt  client_scenario_single_expected_output.txt  server_db_expected_final_single.txt  server_db_initial.txt
tests/system/test_data_standalone/: standalone_db_expected_final.txt  standalone_expected_output.txt  standalone_queries.txt  tariff_alt.cfg
tests/unit/: test_common_defs.cpp  test_database_integration.cpp  test_date.cpp  test_ip_address.cpp  test_provider_record.cpp  test_query_parser.cpp  test_tariff_plan.cpp
tools/: generator.cpp
unit_tests/: test_client_request_processing.cpp  test_database.cpp  test_date.cpp  test_file_utils.cpp  test_ip_address.cpp  test_logger.cpp  test_main.cpp  test_provider_record.cpp  test_query_parser.cpp  test_server.cpp  test_server_command_handler.cpp  test_server_config.cpp  test_tariff_plan.cpp  test_tcp_socket.cpp  test_thread_pool.cpp  test_utils.h
